/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2021-04-10 20:55 UTC+0200 Wilfried Brunken DF7BE
  * install.txt
    ! Additional instructions for
    ! Ubuntu 20.04.2.0 LTS

2021-04-09 10:40 UTC+0200 Wilfried Brunken DF7BE
  * samples/Dialogboxes.hbp (new)
  * samples/Dialogboxes.prg (new)
  * samples/Readme.txt
  * source/gtk/gtkmain.prg
    ! Internal error turorial detected and fixed:
    ! Function hwg_WChoice() freezes on GTK
    ! (Getting started, Standard dialogs)
    ! New sample added (extract from tutor).


2021-04-09 09:12 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/winapi/hcwindow.prg
  * source/winapi/hcontrol.prg
  * source/gtk/hcwindow.prg
  * source/gtk/hcontrol.prg
    * Refresh() method moved to HCustomWindow and uses RedrawWindow() call
  * source/winapi/hgraph.prg
  * source/gtk/hgraph.prg
    * :nLineType and :nPointSize variables added to extend graph representation.
  * source/winapi/message.c
  * source/gtk/message.c
    * hwg_MsgYesNoCancel() returns 1, 2 and 0 now.
  * utils/tutorial/tutor_eng.xml
    * "Graph" section added.

2021-04-08 10:00 UTC+0100 Wilfried Brunken DF7BE
  * doc/hwgdoc_classes.html
  * doc/hwgdoc_functions.html
  * hwgui.hbm
  * include/hwgextern.ch
  * samples/Readme.txt
  * samples/allhbp.hbp
  * samples/htrack.hbp (new)
  * samples/htrack.prg (new)
  * source/gtk/Makefile.linux
  * source/gtk/Makefile.mingw
  * source/gtk/htrackbr.prg (new)
  * source/winapi/htrackbr.prg
  * utils/tutorial/tutor.prg
  * utils/tutorial/tutor_eng.xml
    ! Internal error turorial detected and fixed:
    ! tutor_eng.xml:
    ! Include fires "compile error":
    ! #include "hbclass.ch"
    ! Class HTRACK now part of HWGUI library.
    ! A good idea as a substitute for Win only "HTRACKBAR",
    ! moved from tutor, 
    ! for multi platform usage.