@@ -37,7 +37,7 @@ CLASS HGraph INHERIT HControl
    DATA tbrush
    DATA aPens
    DATA oPen, oPenGrid
-   DATA scaleX, scaleY
+   DATA bPaintItems
    DATA xmax, ymax, xmin, ymin PROTECTED
 
    METHOD New( oWndParent, nId, aValues, nLeft, nTop, nWidth, nHeight, oFont, ;
@@ -103,7 +103,7 @@ METHOD CalcMinMax() CLASS HGraph
    ENDIF
    FOR i := 1 TO ::nGraphs
       nLen := Len( ::aValues[ i ] )
-      l1 := ( Valtype(::aValues[ i,1 ] ) == "N" ) 
+      l1 := ( Valtype(::aValues[ i,1 ] ) == "N" )
       IF ::nType == 1
          FOR j := 1 TO nLen
             IF l1
@@ -149,7 +149,7 @@ METHOD CalcMinMax() CLASS HGraph
 
 METHOD Paint() CLASS HGraph
    LOCAL hDC := hwg_Getdc( ::handle )
-   LOCAL x1 := 0, y1 := 0, x2 := ::nWidth, y2 := ::nHeight
+   LOCAL x1 := 0, y1 := 0, x2 := ::nWidth, y2 := ::nHeight, scaleX, scaleY
    LOCAL i, j, nLen, l1
    LOCAL x0, y0, px1, px2, py1, py2, nWidth
 
@@ -166,10 +166,10 @@ METHOD Paint() CLASS HGraph
    y2 -= ::y2Def
 
    IF ::nType < 3
-      ::scaleX := ( ::xmax - ::xmin ) / ( x2 - x1 )
-      ::scaleY := ( ::ymax - ::ymin ) / ( y2 - y1 )
+      scaleX := ( ::xmax - ::xmin ) / ( x2 - x1 )
+      scaleY := ( ::ymax - ::ymin ) / ( y2 - y1 )
    ELSE
-      ::scaleX := ::scaleY := 1
+      scaleX := scaleY := 1
    ENDIF
 
    IF ::oPenGrid == Nil
@@ -185,8 +185,8 @@ METHOD Paint() CLASS HGraph
       NEXT
    ENDIF
 
-   x0 := x1 + ( 0 - ::xmin ) / ::scaleX
-   y0 := Iif( ::lPositive, y2, y2 - ( 0 - ::ymin ) / ::scaleY )
+   x0 := x1 + ( 0 - ::xmin ) / scaleX
+   y0 := Iif( ::lPositive, y2, y2 - ( 0 - ::ymin ) / scaleY )
 
    hwg_Fillrect( hDC, 0, 0, ::nWidth, ::nHeight, ::brush:handle )
    IF ::nType != 3
@@ -206,10 +206,10 @@ METHOD Paint() CLASS HGraph
          l1 := ( Valtype(::aValues[ i,1 ] ) == "N" )
          IF ::nType == 1
             FOR j := 2 TO nLen
-               px1 := Round( x1 + ( Iif( l1, j-1, ::aValues[ i,j-1,1 ] ) - ::xmin ) / ::scaleX, 0 )
-               py1 := Round( y2 - ( Iif( l1, ::aValues[ i,j-1], ::aValues[ i,j-1,2 ] ) - ::ymin ) / ::scaleY, 0 )
-               px2 := Round( x1 + ( Iif( l1, j, ::aValues[ i,j,1 ] ) - ::xmin ) / ::scaleX, 0 )
-               py2 := Round( y2 - ( Iif( l1, ::aValues[ i,j ], ::aValues[ i,j,2 ] ) - ::ymin ) / ::scaleY, 0 )
+               px1 := Round( x1 + ( Iif( l1, j-1, ::aValues[ i,j-1,1 ] ) - ::xmin ) / scaleX, 0 )
+               py1 := Round( y2 - ( Iif( l1, ::aValues[ i,j-1], ::aValues[ i,j-1,2 ] ) - ::ymin ) / scaleY, 0 )
+               px2 := Round( x1 + ( Iif( l1, j, ::aValues[ i,j,1 ] ) - ::xmin ) / scaleX, 0 )
+               py2 := Round( y2 - ( Iif( l1, ::aValues[ i,j ], ::aValues[ i,j,2 ] ) - ::ymin ) / scaleY, 0 )
                IF px2 != px1
                   IF ::nLineType == 0
                      hwg_Rectangle( hDC, px1, py1, px1+::nPointSize-1, py1+::nPointSize-1 )
@@ -230,7 +230,7 @@ METHOD Paint() CLASS HGraph
             FOR j := 1 TO nLen
                IF Iif( l1, ::aValues[ i,j ], ::aValues[ i,j,2 ] ) != Nil
                   px1 := Round( x1 + nWidth * ( j - 1 ) + 1, 0 )
-                  py1 := Round( y2 - 2 - ( Iif( l1, ::aValues[ i,j ], ::aValues[ i,j,2 ] ) - ::ymin ) / ::scaleY, 0 )
+                  py1 := Round( y2 - 2 - ( Iif( l1, ::aValues[ i,j ], ::aValues[ i,j,2 ] ) - ::ymin ) / scaleY, 0 )
                   hwg_Fillrect( hDC, px1, y2 - 2, px1 + nWidth - 1, py1, ::tbrush:handle )
                ENDIF
             NEXT
@@ -252,7 +252,7 @@ METHOD Paint() CLASS HGraph
       ENDIF
       hwg_Settextcolor( hDC, ::colorCoor )
       FOR i := 1 TO Len( ::aSignY )
-         py1 := Round( y2 - 2 - ( ::aSignY[ i,1 ] - ::ymin ) / ::scaleY, 0 )
+         py1 := Round( y2 - 2 - ( ::aSignY[ i,1 ] - ::ymin ) / scaleY, 0 )
          IF py1 > y1 .AND. py1 < y2
             hwg_Drawline( hDC, x0-4, py1, x0+1, py1 )
             IF ::aSignY[ i,2 ] != Nil
@@ -266,14 +266,12 @@ METHOD Paint() CLASS HGraph
       NEXT
    ENDIF
    IF !Empty( ::aSignX )
-      //nWidth := Round( ( x2 - x1 ) / Len(::aValues[1]), 0 )
       IF ::oFont != Nil
          hwg_Selectobject( hDC, ::oFont:handle )
       ENDIF
       hwg_Settextcolor( hDC, ::colorCoor )
       FOR i := 1 TO Len( ::aSignX )
-         //px1 := Round( x0 + nWidth * ::aSignX[ i,1 ] + Iif( ::nType==2.AND.::lGridXMid,nWidth/2,0 ), 0 )
-         px1 := Round( x1 + ( ::aSignX[ i,1 ] - ::xmin ) / ::scaleX + Iif( ::nType==2.AND.::lGridXMid,nWidth/2,0 ), 0 )
+         px1 := Round( x1 + ( ::aSignX[ i,1 ] - ::xmin ) / scaleX + Iif( ::nType==2.AND.::lGridXMid,nWidth/2,0 ), 0 )
          hwg_Drawline( hDC, px1, y0+4, px1, y0-1 )
          IF ::aSignX[ i,2 ] != Nil
             hwg_Drawtext( hDC, Iif( Valtype(::aSignX[i,2])=="C",::aSignX[i,2], ;
@@ -283,6 +281,10 @@ METHOD Paint() CLASS HGraph
             ENDIF
          ENDIF
       NEXT
+   ENDIF
+
+   IF !Empty( ::bPaintItems )
+      Eval( ::bPaintItems, Self, hDC )
    ENDIF
 
    hwg_Releasedc( ::handle, hDC )
